--- a/tutoring_app_2/pubspec.yaml
+++ b/tutoring_app_2/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^6.1.0 # access fonts from fonts.google.com
   image_picker: ^1.0.4 # access gallery and take images from camera
   intl: ^0.18.1 #internationalized/localized messages, date and number formatting and parsing
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
